--- a/src/components/Product-Card/Card.css
+++ b/src/components/Product-Card/Card.css
@@ -2,11 +2,14 @@
     position: relative;
 }
 picture:hover{
-  opacity: 80%;
+  opacity: 40%;
+  transition: ease-in;
 } 
 .productCard-body{
     max-width: 100%;
     padding-top: 1em;
+    line-height: .1rem;
+    margin-bottom: 2rem;
 }
 .card img{
     height: 200px;
@@ -32,7 +35,7 @@ picture:hover{
     font-weight: 400;
   }
 .card-button:hover {
-  opacity: 70%;
+  opacity: 95%;
 }
 
 /* --------------------------------------------------*/
